# processing-real-time-e2e

./: .gitignore  README.md  docker-compose.yml  project-task.md  pyproject.toml  settings.toml
databricks/workspace-infra/: providers.tf  variables.tf
databricks/workspace-setup/: catalog.tf  db_workspace.tf  defaults.tfvars  external_storage_credentials.tf  external_storage_location.tf  providers.tf  role_credentials.tf  set_env_vars.sh  user.tf  variables.tf
events_generation/: Dockerfile  generate_ecommerce_events.py  requirements.txt  settings.toml
events_processing/: Dockerfile  README.md  event-processing.py  pom.xml  requirements.txt  schemas.py  settings.toml
flink_processing/: Dockerfile  requirements.txt
infra/databricks/: db_workspace.tf  defaults.tfvars  networking.tf  providers.tf  root_bucket.tf  set_env_vars.sh  user.tf  variables.tf
prep-work/events-data-prep/: README.md  generate_fake_product_names.ipynb  prep-raw-events.ipynb
