[project]
name = "real-time-ecommerce-e2e"
version = "0.1.0"
description = ""
authors = [
    {name = "Sho"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "confluent-kafka (>=2.9.0,<3.0.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "apache-flink (==1.20.1)",
    "pandas (==2.0.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "pyspark>=3.5.6",
    "databricks-dlt>=0.3.0",
]



